--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "express-rate-limit": "^6.8.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
+    "html-to-text": "^9.0.5",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
+    "nodemailer": "^6.9.14",
     "nodemon": "^2.0.22",
     "slugify": "^1.6.6"
   }
